--- a/portfolio/src/main/webapp/style.css
+++ b/portfolio/src/main/webapp/style.css
@@ -1,9 +1,107 @@
+a {
+  text-decoration: none;
+}
+
 #content {
+  margin-top: 5%;
   margin-left: auto;
   margin-right: auto;
-  width: 650px;
+  width: 60%;
+  font-family: 'Roboto';
+}
+
+/*
+  Introduction
+*/
+
+#header {
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+}
+
+#intro {
+  flex: 1;
+  padding-right: 50px;
+  line-height: 1.8rem;
+  position: relative;
+}
+
+#social {
+  position: absolute;
+  display: flex;
+  width: 100%;
+  bottom: 5%;
+  align-items: center;
+  justify-content: center;
+}
+
+#social img {
+  margin: 10px;
+  width: 50px;
+  height: auto;
+}
+
+#avatar {
+  width: 300px;
+  height: 300px;
+}
+
+#avatar img {
+  width: 100%;
+  height: 100%;
+  border-radius: 50%;
+  box-shadow:  0px 0px 20px 5px rgb(225, 225, 225);
 }
 
 #greeting-container {
   margin-top: 20px;
+}
+
+/*
+  Background
+*/
+
+#background {
+  margin-top: 50px;
+  width: 100%;
+}
+
+#background-timeline {
+  width: 100%;
+  display: flex;
+}
+
+.background-item {
+  width: 15%;
+  margin-right: 5%;
+}
+
+.background-item img {
+  position: relative;
+  width: 100%;
+  border-radius: 50%;
+  border: 1px solid rgb(225, 225, 225);
+}
+
+.background-where {
+  text-align: center;
+  margin-top: 10px;
+  height: 30px;
+  font-weight: 750;
+  font-size: 0.8rem;
+}
+
+.background-title {
+  margin-top: 10px;
+  font-size: 0.8rem;
+}
+
+/*
+  Projects
+*/
+
+#projects {
+  margin-top: 50px;
+  width: 100%;
 }
