--- a/portfolio/src/main/webapp/style.css
+++ b/portfolio/src/main/webapp/style.css
@@ -54,6 +54,10 @@ a {
   box-shadow:  0px 0px 20px 5px rgb(225, 225, 225);
 }
 
+#avatar img:hover {
+  cursor: pointer;
+}
+
 #greeting-container {
   margin-top: 20px;
 }
@@ -84,6 +88,10 @@ a {
   border: 1px solid rgb(225, 225, 225);
 }
 
+.background-item img:hover {
+  cursor: pointer;
+}
+
 .background-where {
   text-align: center;
   margin-top: 10px;
@@ -97,6 +105,10 @@ a {
   font-size: 0.8rem;
 }
 
+.background-info {
+  margin-top: 10px;
+}
+
 /*
   Projects
 */
@@ -104,4 +116,37 @@ a {
 #projects {
   margin-top: 50px;
   width: 100%;
+}
+
+.project-item {
+  margin-top: 20px;
+  width: 100%;
+  height: 400px;
+  display: flex;
+  justify-content: space-between;
+}
+
+.project-info {
+  width: 50%;
+  line-height: 1.25rem;
+}
+
+.project-snapshot {
+  width: 40%;
+  text-align: center;
+  display: inline-flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.project-snapshot img {
+  width: 100%;
+  margin-top: 10px;
+  margin-bottom: 10px;
+}
+
+.tech-logo {
+  font-size: 2rem;
+  text-align: center;
 }
