--- a/portfolio/src/main/webapp/style.css
+++ b/portfolio/src/main/webapp/style.css
@@ -150,3 +150,32 @@ a {
   font-size: 2rem;
   text-align: center;
 }
+
+#carousel {
+  width: 20%;
+  margin: 0 auto;
+  display: flex;
+  justify-content: space-between;
+}
+
+.arrow-button {
+  width: 40%;
+  text-align: center;
+}
+
+.arrow-button:hover {
+  cursor: pointer;
+}
+
+.arrow-button img {
+  width: 30%;
+  height: auto;
+}
+
+/*
+  Footer
+*/
+
+#footer {
+  height: 50px
+}
