--- a/portfolio/src/main/webapp/blog/style.css
+++ b/portfolio/src/main/webapp/blog/style.css
@@ -5,3 +5,17 @@ body {
     font-family: 'Roboto';
     text-align: center;
 }
+
+.comment-item {
+    width: 50%;
+    margin: 0 auto;
+    justify-content: space-between;
+    display: flex;
+}
+
+#footer {
+    width: 100%;
+    position: absolute;
+    text-align: center;
+    bottom: 20px;
+}
